Upgrade sbt-pack to 0.22 and add Java 24 JVM options
- Upgraded sbt-pack plugin from 0.21 to 0.22
- Added Java 24+ specific JVM options for airframe-http-codegen and airframe-benchmark:
  - --sun-misc-unsafe-memory-access=allow
  - --enable-native-access=ALL-UNNAMED
- These options are automatically applied when running with Java 24 or higher

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>